# rust-reminder

./: Cargo.toml  README.md
migrations/sqlite/: up.sql
src/: main.rs  models.rs  reminder.rs  reminder_dialog.rs  reminder_edit_dialog.rs  schema.rs  utils.rs
