[package]
name = "rust-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.15.3"
diesel = { version = "1.4.8", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
chrono = "0.4.19"
